--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test:watch": "bun test --watch"
   },
   "dependencies": {
+    "dompurify": "^3.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "wrangler": "3.90.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.2.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
