MFM(Misskey Markup Language) 렌더링 기능 구현
🎯 구현 목표
- Misskey 인스턴스에서 사용되는 MFM 문법 완벽 지원
- 통합된 사용자 경험 제공 (Mastodon/Markdown과 일관성)
- 성능 및 접근성 고려 (CSS 애니메이션 + 사용자 설정)
- 안정성 확보 (공식 라이브러리 + 단위 테스트)

📁 주요 변경사항
- mfm-js 라이브러리 추가 및 TypeScript 타입 선언
- MFM 파서/렌더러 유틸리티 구현 (src/ui/utils/mfm.ts)
- TimelineItem 컴포넌트에 플랫폼별 렌더링 로직 통합
- MFM 전용 스타일시트 구현 (src/ui/styles/mfm.css)
- 사용자 설정 관리 추가 (애니메이션 on/off, 이모지 표시 등)
- HTML 정화기 개선 (MFM 관련 태그 허용)
- misskeyMapper에서 MFM 콘텐츠 자동 감지
- 단위 테스트 및 상세 문서 추가

✨ 지원하는 MFM 기능
- 기본 서식: **굵게**, *기울임*, ~~취소선~~, <small>작게</small>
- 구조: > 인용, <center>중앙정렬</center>, 코드 블록
- MFM 함수: $[tada], $[spin], $[rainbow], $[jump] 등
- 스타일링: $[fg.color=red], $[bg.color=blue], $[border.style=solid]
- 기타: 링크, 멘션, 해시태그, 커스텀 이모지

🎨 스타일 특징
- 다크/라이트 테마 완벽 지원
- GPU 가속 애니메이션 (CSS transform 활용)
- 접근성 고려 (prefers-reduced-motion 지원)
- 반응형 디자인

🧪 테스트
- 기본 렌더링 기능 테스트
- MFM 함수 렌더링 테스트
- 사용자 설정 옵션 테스트
- 에러 처리 및 보안 테스트

📚 문서
- MFM_IMPLEMENTATION.md에 상세 구현 가이드 추가
- 사용 예제 및 API 문서 포함

이 구현으로 Textodon 사용자들은 Misskey 인스턴스의 모든 MFM 콘텐츠를
완벽하게 즐길 수 있습니다.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "dompurify": "^3.3.1",
+    "mfm-js": "^0.25.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "wrangler": "3.90.0"
