--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "dompurify": "^3.3.1",
+    "emoji-datasource": "^16.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "wrangler": "3.90.0"
